gradle tasks refactoring for func tests